# KanCut

./: README.md  WINPCAP_SETUP.md  index.html  package-lock.json  package.json
src/: main.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error_handler.rs  lib.rs  logger.rs  main.rs
src/components/: ErrorHandler.tsx  LogViewer.tsx
src/contexts/: AppContext.tsx
src/utils/: api.ts  errorHandler.ts  logger.ts
