[package]
name = "kancut"
version = "0.1.0"
description = "Network traffic control application"
authors = ["You"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "kancut_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
path = "src/lib.rs"

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
mac_address = "1.1"
anyhow = "1.0"
uuid = { version = "1.4.1", features = ["v4", "serde"] }
ipnetwork = "0.20.0"
local-ip-address = "0.5.6"
futures = "0.3"
if-addrs = "0.10.1"
network-interface = "1.0.1"
windows = { version = "0.51.1", features = ["Win32_NetworkManagement_IpHelper", "Win32_Foundation"] }
ping-rs = "0.1.1"
log = "0.4"
env_logger = "0.10"
chrono = "0.4"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

